fix: make iframe always visible WHY: some websites hide iframes by default

--- a/src/iframe.scss
+++ b/src/iframe.scss
@@ -1,15 +1,22 @@
-@import "common/style-guide/colors";
+@import 'common/style-guide/colors';
 
 .drill-widget-iframe {
-  z-index: 2147483647;
+  // some websites hide iframes with one way or the other
+  // thus, the "!important" hack is required
+  display: block !important;
+  visibility: visible !important;
+  opacity: 1 !important;
+  z-index: 2147483647 !important;
+  width: 100% !important;
+  height: 36px !important;
+
+  background-color: map-get($monochrome, light-tint);
+  border-style: none;
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
+
+  position: fixed;
   left: 0;
   top: 0;
-  position: fixed;
-  border-style: none;
-  width: 100%;
-  height: 36px;
-  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
-  background-color: map-get($monochrome, light-tint);
 
   &-position {
     &__top {
@@ -27,6 +34,6 @@
   }
 
   &--hidden {
-    display: none;
+    display: none !important;
   }
 }
